@@ -27,16 +27,17 @@
 
 #define IDD_DBG				2000
 #define IDC_DBG_LV_PC			( IDD_DBG + 1 )
-#define IDC_DBG_LV_STACK		( IDD_DBG + 2 )
-#define IDC_DBG_LV_EVENTS		( IDD_DBG + 3 )
-#define IDC_DBG_LV_BPS			( IDD_DBG + 4 )
-#define IDC_DBG_ED_EVAL			( IDD_DBG + 5 )
-#define IDC_DBG_BTN_EVAL		( IDD_DBG + 6 )
-#define IDC_GRP_MEMMAP			( IDD_DBG + 7 )
-#define IDC_DBG_BTN_STEP		( IDD_DBG + 8 )
-#define IDC_DBG_BTN_CONT		( IDD_DBG + 9 )
-#define IDC_DBG_BTN_BREAK		( IDD_DBG + 10 )
-#define IDC_DBG_BTN_CLOSE		( IDD_DBG + 11 )
+#define IDC_DBG_SB_PC			( IDD_DBG + 2 )
+#define IDC_DBG_LV_STACK		( IDD_DBG + 3 )
+#define IDC_DBG_LV_EVENTS		( IDD_DBG + 4 )
+#define IDC_DBG_LV_BPS			( IDD_DBG + 5 )
+#define IDC_DBG_ED_EVAL			( IDD_DBG + 6 )
+#define IDC_DBG_BTN_EVAL		( IDD_DBG + 7 )
+#define IDC_GRP_MEMMAP			( IDD_DBG + 8 )
+#define IDC_DBG_BTN_STEP		( IDD_DBG + 9 )
+#define IDC_DBG_BTN_CONT		( IDD_DBG + 10 )
+#define IDC_DBG_BTN_BREAK		( IDD_DBG + 11 )
+#define IDC_DBG_BTN_CLOSE		( IDD_DBG + 12 )
 
 #define IDC_DBG_MAP11			( IDC_DBG_BTN_CLOSE + 1 )
 #define IDC_DBG_MAP12			( IDC_DBG_MAP11 + 1 )
