@@ -35,8 +35,9 @@ STYLE WS_POPUP | WS_CAPTION | WS_VISIBLE | WS_SYSMENU
 BEGIN
   CONTROL	"", IDC_DBG_LV_PC, "SysListView32", \
                 WS_CHILD | WS_VISIBLE | LVS_REPORT | \
-                LVS_SINGLESEL | LVS_SHOWSELALWAYS, \
-                260, 3, 100, 190, WS_EX_CLIENTEDGE
+                LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSCROLL, \
+                260, 3, 88, 190, WS_EX_CLIENTEDGE
+  SCROLLBAR     IDC_DBG_SB_PC, 347, 3, 12, 190, WS_CHILD | SBS_VERT
   CONTROL	"", IDC_DBG_LV_STACK, "SysListView32",
                 WS_CHILD | WS_VISIBLE | LVS_REPORT | \
                 LVS_SINGLESEL | LVS_SHOWSELALWAYS, \
@@ -52,11 +53,11 @@ BEGIN
   EDITTEXT	IDC_DBG_ED_EVAL, 4, 199, 470, 13, \
                 WS_CHILD | WS_VISIBLE, WS_EX_CLIENTEDGE
 
-  PUSHBUTTON	"&Evaluate", IDC_DBG_BTN_EVAL, 480, 199, 36, 13
+  DEFPUSHBUTTON	"&Evaluate", IDC_DBG_BTN_EVAL, 480, 199, 36, 13
   PUSHBUTTON	"&Single Step", IDC_DBG_BTN_STEP, 274, 217, 56, 13
   PUSHBUTTON	"&Continue", IDC_DBG_BTN_CONT, 336, 217, 56, 13
   PUSHBUTTON	"&Break", IDC_DBG_BTN_BREAK, 398, 217, 56, 13
-  DEFPUSHBUTTON	"&Close", IDC_DBG_BTN_CLOSE, 460, 217, 56, 13
+  PUSHBUTTON	"&Close", IDC_DBG_BTN_CLOSE, 460, 217, 56, 13
 
   GROUPBOX	"Memory Map", IDC_GRP_MEMMAP, 114, 3, 142, 142
 
